[gd_scene load_steps=12 format=2]

[ext_resource path="res://RainIsoMainContents/Scenes/ConveyorBlocks.gd" type="Script" id=1]
[ext_resource path="res://RainIsoMainContents/Resources/ConveyorBlocksUsed.png" type="Texture" id=2]
[ext_resource path="res://RainIsoMainContents/Resources/ConveyorBlocksUse02.png" type="Texture" id=3]
[ext_resource path="res://RainIsoMainContents/Resources/ConveyorBlocksUse01.png" type="Texture" id=4]
[ext_resource path="res://RainIsoMainContents/Resources/ConveyorBlocksUse04.png" type="Texture" id=5]
[ext_resource path="res://RainIsoMainContents/Resources/ConveyorBlocksUse03.png" type="Texture" id=6]

[sub_resource type="StreamTexture" id=7]
load_path = "res://.import/ConveyorBlocks.png-1c57f6be313a97bc3647a901befd3d96.stex"

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 31.1676, 15.4533 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 33.235, 18.877 )

[sub_resource type="Animation" id=4]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 2.2974, 2.92817, 1 ),
"update": 0,
"values": [ Vector2( 0, -45 ), Vector2( 0, 0 ), Vector2( 0, -45 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "used"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ SubResource( 7 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 2 ) ]
}

[node name="ConveyorBlocks" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -45 )
texture = SubResource( 7 )

[node name="StaticBody2D" type="StaticBody2D" parent="Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/StaticBody2D"]
position = Vector2( 0.117321, -0.0386534 )
shape = SubResource( 2 )
one_way_collision = true

[node name="Area2D" type="Area2D" parent="Sprite"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Area2D"]
position = Vector2( -0.092865, 0.320578 )
shape = SubResource( 3 )
one_way_collision = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/launch = SubResource( 4 )

[node name="AnimationPlayerUse" type="AnimationPlayer" parent="."]
playback_speed = 3.0
anims/used = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="Sprite/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
